des tests pas ouf

--- a/public/CSS/hud.less
+++ b/public/CSS/hud.less
@@ -265,9 +265,11 @@ body {
     position: relative;
     z-index: 15;
 }
-.margin_righttt{
-    margin-left:50px;
+
+.margin_righttt {
+    margin-left: 50px;
 }
+
 #top {
     display: flex;
     align-items: flex-start;
@@ -276,7 +278,7 @@ body {
     z-index: 15;
     width: fit-content;
     margin-left: 10%;
-    margin:0 auto 0 auto;
+    margin: 0 auto 0 auto;
 
     .containers {
         width: 100%;
@@ -287,7 +289,7 @@ body {
         margin-left: calc(50% - 0px);
         transform: translateX(-50%);
         text-align: center;
-        
+
         p {
             text-shadow: 1px 2px 3px black;
             position: relative;
@@ -327,7 +329,7 @@ body {
             font-style: bolder;
             color: @text-color;
             align-items: center;
-            
+
 
             .progress {
                 // box-shadow: -3px 0px 15px 1px rgba(0, 0, 0, 0.49);
@@ -652,17 +654,19 @@ body {
     }
 }
 
-.item-description{
-    display:flex;
+.item-description {
+    display: flex;
     flex-direction: column;
     align-items: stretch;
     justify-content: space-evenly;
-    height:100%;
-    button{
-        bottom:0;
+    height: 100%;
+
+    button {
+        bottom: 0;
     }
 }
-.item-title{
+
+.item-title {
     justify-content: center;
     align-content: center;
 }
@@ -686,7 +690,7 @@ body {
 
         #events-content {
             p {
-                color:white;
+                color: white;
                 font-size: 1.2rem;
             }
         }
@@ -804,7 +808,6 @@ body {
 
             .title_ressources {
                 height: fit-content;
-
             }
 
             .rubric {
@@ -920,7 +923,7 @@ body {
                 font-family: "Koulen";
                 font-weight: bold;
                 font-size: 1rem;
-                margin-top:auto;
+                margin-top: auto;
                 // margin-bottom: -15px;
 
                 &:hover {
@@ -1235,14 +1238,15 @@ body {
 
             }
 
-            p,table tr td {
+            p,
+            table tr td {
                 color: white;
                 text-align: left;
             }
 
-            .txt_align_center{
+            .txt_align_center {
                 text-align: center;
-                padding:0 10px 0 0 ;
+                padding: 0 10px 0 0;
             }
         }
     }
@@ -1258,8 +1262,8 @@ body {
     position: absolute;
     padding: 0 20px;
     margin-top: 90px;
-    margin-left:auto;
-    right:0;
+    margin-left: auto;
+    right: 0;
 
     &:hover {
         cursor: pointer;
