--- a/public/CSS/hud.less
+++ b/public/CSS/hud.less
@@ -925,6 +925,7 @@ body {
                 font-size: 1rem;
                 margin-top: auto;
                 // margin-bottom: -15px;
+                justify-content: center;
 
                 &:hover {
                     background-color: white;
@@ -1270,6 +1271,8 @@ body {
 
         .main_content {
             display: flex;
+            height: 80vh;
+            overflow: auto;
         }
     }
 
