--- a/views/game.ejs
+++ b/views/game.ejs
@@ -108,13 +108,15 @@
                                 <td>Mainteneur(s) embauché(s) : <strong><span id="actual-maint"></span></strong></td>
                             </tr>
                             <tr>
-                                <td>Technicien(s) de surface embauché(s) : <strong><span id="actual-clean"></span></strong></td>
+                                <td>Technicien(s) de surface embauché(s) : <strong><span
+                                            id="actual-clean"></span></strong></td>
                             </tr>
                             <tr>
                                 <td>Ingénieur(s) embauché(s) : <strong><span id="actual-inge"></span></strong></td>
                             </tr>
                             <tr>
-                                <td>Personnel(s) administratif embauché(s) : <strong><span id="actual-super"></span></strong></td>
+                                <td>Personnel(s) administratif embauché(s) : <strong><span
+                                            id="actual-super"></span></strong></td>
                             </tr>
                         </table><br>
                     </div>
@@ -170,7 +172,9 @@
                     <div>
                         <h2>> But du jeu :</h2>
                         <p>Améliorez vos machines, gérez votre personnel, le tout grâce à la boutique pour faire le plus
-                            de recettes possibles en repectant vos différents objectifs de développement durable.</p>
+                            de recettes possibles en repectant vos différents objectifs de développement durable.
+                            N'hésitez pas à consulter le tableau de bord pour connaître votre stade d'avancement, le
+                            nombre de salariés que vous avez ou encore vos dépenses et recette prévisionnelles.</p>
                         <br>
                     </div>
                     <div>
@@ -181,7 +185,14 @@
                     <div>
                         <h2>> Conditions de victoire :</h2>
                         <p>Ne faites pas faillite, ayez le meilleur ratio Argent - ODD ! Ou soyez le dernier en lice
-                            pour la victoire.</p><br>
+                            pour la victoire. Gestion des ODD :</p>
+                        <p><strong>> Social :</strong> Soyez stables dans le recrutement de votre personnel, ne privilégiez aucun métier
+                        </p>
+                        <p><strong>> Économique :</strong> Soyez en croissance et ayez suffisemment d'argent pour vous rapprocher de 100%
+                        </p>
+                        <p><strong>> Écologique :</strong> Les machines de niveau supérieur vous rapportent plus de points, ainsi que
+                            l'achat de machines d'occasion. Pensez aussi à changer de fournisseur, le prix en vaut la
+                            chandelle !</p><br>
                     </div>
                     <div>
                         <h2>> Conditions de defaite :</h2>
