--- a/public/CSS/hud.less
+++ b/public/CSS/hud.less
@@ -669,6 +669,7 @@ body {
 .item-title {
     justify-content: center;
     align-content: center;
+    flex-direction: column;
 }
 
 #events-modal {
