events defined in json, appliqués en front,  display on le tableau de bord + bugs + tom qui mange à 24h35 et eng qui cherche son for i dans for i à la con ce gosse, martin qui pion,ce sa daronne et qui est positif est pas qu'à mon charme (c'est moi Maxime l'écrivain du soir), peut-être la fin d'un calvaire avec 2 cons qui se battent pour 1 sel...

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -141,6 +141,11 @@
                             </tr>
                         </table><br>
                     </div>
+                    <div>
+                        <h2>> Evenement en cours :</h2>
+                        <p><span id="prev-event"></span></p>
+                        <p><span id="prev-event-dur"></span></p><br>
+                    </div>
                 </div>
             </div>
             <div class="containers"
