--- a/views/game.ejs
+++ b/views/game.ejs
@@ -423,14 +423,14 @@
                         <!-- ------------------------------ Occasions ------------------------------ -->
 
                         <div disable class="occaz j1 clickable" style="display: none;">
-                            <div>
+                            <div class="item-title" style="display: block;">
                                 <p></p>
                                 <p></p>
                                 <p></p>
                             </div>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display:none;">Acheter</button>
-                        </div>
+                        </div class="item-title" style="display: block;">
                         <div disable class="occaz j2 clickable" style="display: none;">
                             <div>
                                 <p></p>
@@ -628,7 +628,7 @@
                         <!-- ------------------------------ Occasions ------------------------------ -->
 
                         <div disable class="occaz j1 clickable" style="display: none;">
-                            <div>
+                            <div class="item-title" style="display: block;">
                                 <p></p>
                                 <p></p>
                                 <p></p>
@@ -637,7 +637,7 @@
                             <button class="buy-button" style="display:none;">Acheter</button>
                         </div>
                         <div disable class="occaz j4 void clickable" style="display: none;">
-                            <div>
+                            <div class="item-title" style="display: block;">
                                 <p></p>
                                 <p></p>
                                 <p></p>
